kubernetes/deployment-model-service-shadow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service-shadow
  labels:
    app: model-service
    version: shadow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
      version: shadow
  template:
    metadata:
      labels:
        app: model-service
        version: shadow
    spec:
      containers:
        - name: model-service
          image: ghcr.io/remla2024-team9/model-service:latest
          ports:
            - containerPort: 5000
            - containerPort: 8000 # port for metrics
