kubernetes/monitoring.yml
apiVersion: v1
kind: Pod
metadata:
  name: showmetrics
  namespace: monitoring
  labels:
    app: showmetrics
spec:
  containers:
    - name: showmetrics
      image: proksch/showmetrics:latest
      ports:
        - containerPort: 8080
