kubernetes/service-model-service-shadow.yml
apiVersion: v1
kind: Service
metadata:
  name: model-service-shadow
  namespace: default
spec:
  selector:
    app: model-service-shadow
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
