kubernetes/service-model-service.yml
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
